--- a/src/styles/scss/pages/_home.scss
+++ b/src/styles/scss/pages/_home.scss
@@ -65,6 +65,28 @@ li.flex-md-row-reverse img {
   font-family: 'Lato', 'LXGW WenKai Mono TC';
 }
 
+.coupon-mask {
+  background: $gray-900;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0.8;
+}
+
+.coupon-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  padding: 108px 0;
+  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/olive-branch/1741079214692.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=TQJaRtvxY6ELJzT4N8gwFIp0rtTi7hqRfVsoYRbwiykHrYEt%2BevOwbWRozZIJMhaVigR9va%2ByoK03vzJWWhc2svRLeexs78CqE6BZa%2Bu5W4Yk5ruNq9nJ6bA8Bj0lKtWIn1QPpERHjDfycO%2B5AoBE5N3rqzm3RAR%2F4D65D61TUFDhw1AcEEj78ZKa%2FC7CJ7NEdLLL7%2B%2BA5GktuA9sBCIliLO2HKLnAiKDBuZjqQz10xxIgj6Dmv9xNARamh%2B%2F6hLaS1vZYEIUSz%2BcQMryFTJd0WEWxyqS9o7dzPvBGEitx0EaoJvYPIcvUOQx3lbvfK0GdxnCV9FsANTa90yISHZfQ%3D%3D);
+  background-position: center;
+  background-size: cover;
+  button {
+    width: 30%;
+  }
+}
+
 .top-product-items {
   display: flex;
   flex-direction: row;
@@ -140,6 +162,10 @@ li.flex-md-row-reverse img {
   .primary-text-mobile h4 {
     font-size: 20px;
     margin-bottom: 24px;
+  }
+
+  .coupon-block button {
+    width: 80%;
   }
 
   .secondary-content-items {
