--- a/src/styles/scss/pages/_home.scss
+++ b/src/styles/scss/pages/_home.scss
@@ -11,7 +11,7 @@
 }
 
 .primary-cover {
-  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/olive-branch/1739975484194.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=GeoXKX9YXmOUYfFONcpcEUiqzirE9cQmxs8FsXmMOvSfIF7vZU8sTzlOq%2BMtRAvb%2BveJ1bGCwzh4vHXqfpT847JoE7kJuMvpLCs3o33ONMJSP1n3Or6%2F5%2B2JnvsMEKXmtIeEX8TfR97kXzoEfP10rkQaPwrQPbEuNq0L0uaH1rhoWcivs5krlZZtOAoA3FmQnfjsnJX5QMJGFUZvfX5T2%2Fe2T54Ku215hZ%2FhmzF9FcI%2BYh6nBSEvjRdTY74eMF3Jw5%2BAYqR9vf0j0A5PU5c%2FpiGQNTzsduUuRU88P0BB7Ag75D3gJdNsdlV2UwdncIAMA386DLulwFp5%2BaPpOKTTZA%3D%3D);
+  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/olive-branch/1739975484194.jpg);
   background-position: center;
   background-size: cover;
   height: 800px;
@@ -79,7 +79,7 @@ li.flex-md-row-reverse img {
   align-items: center;
   gap: 24px;
   padding: 108px 0;
-  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/olive-branch/1741079214692.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=TQJaRtvxY6ELJzT4N8gwFIp0rtTi7hqRfVsoYRbwiykHrYEt%2BevOwbWRozZIJMhaVigR9va%2ByoK03vzJWWhc2svRLeexs78CqE6BZa%2Bu5W4Yk5ruNq9nJ6bA8Bj0lKtWIn1QPpERHjDfycO%2B5AoBE5N3rqzm3RAR%2F4D65D61TUFDhw1AcEEj78ZKa%2FC7CJ7NEdLLL7%2B%2BA5GktuA9sBCIliLO2HKLnAiKDBuZjqQz10xxIgj6Dmv9xNARamh%2B%2F6hLaS1vZYEIUSz%2BcQMryFTJd0WEWxyqS9o7dzPvBGEitx0EaoJvYPIcvUOQx3lbvfK0GdxnCV9FsANTa90yISHZfQ%3D%3D);
+  background-image: url(https://storage.googleapis.com/vue-course-api.appspot.com/olive-branch/1741079214692.jpg);
   background-position: center;
   background-size: cover;
   button {
